Desabilitando os campos do formulário de orçamento, para quando o mesmo já foi fechado.

--- a/templates/orcamento.html
+++ b/templates/orcamento.html
@@ -9,7 +9,11 @@
 		<!-- idtipopagamento: <input type='text' id='idtipopagamento' class='to-save'> -->
 		
 		<h4 class="mb-3 alert barra_fis">Dados Gerais</h4>
+
 		
+		
+		<span id="place-holder-message-top"></span>
+
 		<div class="row">
 			<div class="col-md-3 mb-3">
 				
