--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -49,7 +49,7 @@
 				
 	            <label for="senhausuario" class="font-weight-bold">Senha (Será necessário trocar)</label>
 				<div class="input-group">
-					<input type="text" name="senhausuario" id="senhausuario" class="form-control to-save"/>
+					<input type="password" name="senhausuario" id="senhausuario" class="form-control to-save"/>
 				</div>
 				
 			</div>
@@ -57,7 +57,7 @@
 				
 	            <label for="senhausuarioreinicializar" class="font-weight-bold">Senha (Reinicializar)</label>
 				<div class="input-group">
-					<input type="text" name="senhausuarioreinicializar" id="senhausuarioreinicializar" class="form-control to-save"/>
+					<input type="password" name="senhausuarioreinicializar" id="senhausuarioreinicializar" class="form-control to-save"/>
 				</div>
 				
 			</div>
